Add 404 and 500 page

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -87,6 +87,9 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'tracking_history_out' %}">Load Out</a></li>
                         <li><a class="dropdown-item" href="{% url 'manifest_show' %}">Manifest</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="{% url 'tracking_history_in' %}">Load In</a></li>
                     </ul>
                 </div>
