--- a/api/templates/drs_list_ajax.html
+++ b/api/templates/drs_list_ajax.html
@@ -88,6 +88,7 @@
                         $("#tbody3").html(table_data);
                     } else {
                         alert(response.message);
+                        $("#search_drs_num").focus();
                     };
                 }
             });
