--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -106,7 +106,9 @@
                         </li>
                         <li><a class="dropdown-item" href="{% url 'area_master' %}">Area Master</a></li>
                         <li><a class="dropdown-item" href="{% url 'delivery_boy_master' %}">Delivery boy Master</a></li>
-
+                        {% if user.is_superuser %}
+                        <li><a class="dropdown-item" href="{% url 'c_note_master' %}">C Note Master</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -117,7 +119,6 @@
 
     <!-- Navbar ends here -->
     <!-- Body Home section here -->
-
 
     {% block content %} {% endblock content %}
 
