Changes in drs and tracking details

--- a/api/templates/drs_upload.html
+++ b/api/templates/drs_upload.html
@@ -55,7 +55,7 @@
                                     <th scope="col">Origin</th>
                                     <th scope="col">Consignee Name</th>
                                     <th scope="col">Status</th>
-                                    <th scope="col">Reason</th>
+                                    <th scope="col">Remarks/Receiver</th>
                                 </tr>
                             </thead>
                             <tbody id="tbody">
