Added cash booking feature

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -79,8 +79,8 @@
     <div class="container mt-5 alert alert-dark back_color">
         <div class="row justify-content-center">
             <div class="col-md-6 text-center">
-                <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-outline-dark mt-3"><b>Booking</b></a>
-
+                <!-- <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-outline-dark mt-3"><b>Booking</b></a> -->
+                <a href="{% url 'booking_dashboard' %}" class="text-decoration-none btn btn-outline-dark mt-3"><b>Booking</b></a>
                 <!-- <a href="url 'tracking_history'" class="text-decoration-none btn btn-outline-dark mt-3" target="_blank"><b>Tracking</b></a> -->
                 <div class="btn-group">
                     <button type="button" class="btn btn-outline-dark mt-3 dropdown-toggle nav_login_btn mx-0" data-bs-toggle="dropdown" aria-expanded="false">Load</button>
